[workspace]
members = [
    "./crates/common",
    "./crates/fees",
]
resolver = "2"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12.7", features = ["json"] }
serde_json = "1.0.128"


[profile.dind]
inherits = "dev"

[profile.no-debug-assertions]
inherits = "dev"
debug-assertions = false

[profile.release]
lto = true

[env]
RUST_BACKTRACE = "1"
